---
source: tests/integration.rs
expression: stderr
---
<fixture>:4:1: error[E_GROUP_EMPTY]: `alt` block must not be empty
end
^^^
